--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             aria-labelledby="side-navLabel" id="side-nav">
                 
 
-                <img class="d-block mx-auto rounded-circle" src="../img/Long pic.JPG" alt="profile picture" title="profile picture">
+                <img class="d-block mx-auto rounded-circle" src="img/Long pic.JPG" alt="profile picture" title="profile picture">
 
                 <h3 class="text-center p-4">Long Nguyen</h3>
                 
